--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Global Mosquito Alert
 locale:           en_US
-url:              http://globalmosquitoalert.com
+url:              //globalmosquitoalert.com
 
 
 # Jekyll configuration
